--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>BED HOSPITALITY — Self Assessment Clean Baseline</title>
 <style>
   :root {
-    --pad: 20px;           /* 20px side padding on all pages */
-    --label-w: 118px;      /* fixed label width */
-    --gap: 8px;            /* NORMAL space between label and field */
+    --pad: 20px;
+    --label-w: 96px;
+    --gap: 6px;
     --brand-blue: #1E90FF;
     --progress-red: #E11D48;
     --progress-gray: #f3f4f6;
@@ -23,20 +23,23 @@
   h2 { font-size:14pt; margin:22px 0 8px 0; line-height:1.25; }
   .intro { font-size:10pt; color:#333; margin:4px 0 14px 0; }
 
-  /* Header progress bar (7 dots across all pages) */
   .progress { display:flex; gap:10px; margin:6px 0 16px 0; }
   .dot { width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb; }
   .dot.active { background: var(--progress-red); border-color: var(--progress-red); }
 
-  /* Grid rows so inputs/selects reach the right edge (20px page padding) */
   .row {
     display: grid;
-    grid-template-columns: var(--label-w) 1fr;
+    grid-template-columns: minmax(84px, var(--label-w)) 1fr;
     column-gap: var(--gap);
     align-items: center;
     margin: 10px 0;
   }
-  .row > label { font-size:10pt; font-weight:400; }
+  .row > label {
+    font-size:10pt;
+    font-weight:400;
+    white-space: normal;
+    word-break: break-word;
+  }
   .row > input,
   .row > select {
     width: 100%;
@@ -47,7 +50,6 @@
     background: #fff;
     transition: box-shadow .15s, border-color .15s, background-color .15s;
   }
-  /* Blue focus background for BOTH input and select */
   .row > input:focus,
   .row > select:focus {
     outline: none;
@@ -57,25 +59,21 @@
   }
   select:invalid { color:#aaa; }
 
-  /* Buttons */
   .actions { padding-left: calc(var(--label-w) + var(--gap)); margin-top: 14px; display:flex; gap:10px; justify-content: flex-end; }
   button { padding: 12px 18px; border: none; border-radius: 12px; background: var(--brand-blue); color: #fff; font-size: 12pt; cursor: pointer; }
   .btn-secondary { background:#fff; color:#111; border:1px solid var(--gray-300); }
 
-  /* Question items */
   .q-item { padding:12px 0; border-top:1px solid #ddd; }
   .q-item > div:first-child { font-size: 11pt; margin-bottom: 6px; }
   .q-item em { font-size: 10pt; color: #444; display:block; margin-bottom:6px; }
   .pill { display:inline-block; width:32px; height:32px; line-height:32px; text-align:center; border:1px solid #ccc; border-radius:50%; margin-right:6px; cursor:pointer; user-select:none; }
   .pill.selected { background: var(--brand-blue); color:#fff; }
 
-  /* Instruction page visuals (round blue 1–5) */
   .scale-list { list-style:none; padding:0; margin:10px 0; }
   .scale-item { display:flex; align-items:center; gap:10px; margin:8px 0; font-size:12pt; }
   .badge { width:28px; height:28px; border-radius:50%; background: var(--brand-blue); color:#fff; display:inline-flex; align-items:center; justify-content:center; font-weight:700; }
   .instructions-box { font-size:12pt; color:#222; line-height:1.5; margin-bottom:12px; }
 
-  /* Mobile fallback: stack label above field on very narrow screens */
   @media (max-width: 340px) {
     .row { grid-template-columns: 1fr; row-gap: 6px; }
     .actions { padding-left: 0; }
@@ -269,7 +267,7 @@
       <span class="dot"></span>
     </div>
 
-    <!-- PAGE 1: Welcome form -->
+    <!-- ===== DO NOT EDIT: PAGE 1 START ===== -->
     <section id="welcome">
       <h2>Your Information</h2>
       <div class="row"><label for="nick">your name</label><input id="nick"></div>
@@ -306,8 +304,8 @@
         <button id="toInstructions">Start</button>
       </div>
     </section>
+    <!-- ===== DO NOT EDIT: PAGE 1 END ===== -->
 
-    <!-- PAGE 2: Instructions (patched per your text) -->
     <section id="instructions" style="display:none">
       <h2>HOW TO ASSESS YOURSELF</h2>
       <p class="instructions-box">
@@ -327,7 +325,6 @@
       </div>
     </section>
 
-    <!-- PAGE 3: Questions Part 1 -->
     <section id="q1" style="display:none">
       <h2>Statements Part 1</h2>
       <div id="list-q1"></div>
@@ -337,7 +334,6 @@
       </div>
     </section>
 
-    <!-- PAGE 4: Questions Part 2 -->
     <section id="q2" style="display:none">
       <h2>Statements Part 2</h2>
       <div id="list-q2"></div>
@@ -347,7 +343,6 @@
       </div>
     </section>
 
-    <!-- PAGE 5: Finish placeholder -->
     <section id="finish" style="display:none">
       <h2>Completed</h2>
       <p class="intro">Thank you. We will add the confirmation popup next.</p>
@@ -404,7 +399,6 @@
     return d;
   }
 
-  // Navigation
   el('toInstructions').onclick = () => show('instructions');
   el('backToWelcome').onclick = () => show('welcome');
   el('toQ1').onclick = () => {
