--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   h1 { font-size:20pt; margin:0 0 8px 0; line-height:1.2; }
   .subheader { font-size:18pt; margin:0 0 12px 0; font-weight:500; }
   h2 { font-size:14pt; margin:22px 0 8px 0; line-height:1.25; }
-  .intro { font-size:10pt; color:#333; margin:4px 0 14px 0; }
+  .intro { font-size:12pt; color:#333; margin:4px 0 14px 0; } /* unified intro text size */
 
   .progress { display:flex; gap:10px; margin:6px 0 16px 0; }
   .dot { width:10px; height:10px; border-radius:50%; background:var(--progress-gray); border:1px solid #e5e7eb; }
@@ -48,14 +48,14 @@
     border: 1px solid var(--gray-300);
     border-radius: 10px;
     background: #fff;
-    transition: box-shadow .15s, border-color .15s, background-color .15s;
+    transition: box-shadow .15s, border-color .15s;
   }
   .row > input:focus,
   .row > select:focus {
     outline: none;
     border-color: rgba(30,144,255,0.8);
     box-shadow: 0 0 0 3px rgba(30,144,255,0.18);
-    background-color: rgba(30,144,255,0.04);
+    background-color: #fff; /* stays white */
   }
   select:invalid { color:#aaa; }
 
