--- a/index.html
+++ b/index.html
@@ -5,433 +5,54 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>BED HOSPITALITY — Self Assessment</title>
 <style>
-  :root{
-    --pad:20px; --label-w:96px; --gap:6px;
-    --brand-blue:#1E90FF; --progress-red:#E11D48; --progress-gray:#f3f4f6;
-    --gray-300:#cfd4dc;
-    --good:#22c55e; --mid:#f59e0b; --bad:#ef4444;
-  }
-  *{box-sizing:border-box}
   body{font-family:system-ui,Arial,sans-serif;background:#F9FAFB;color:#111;margin:0}
-  .container{width:100%;margin:0;padding:24px var(--pad)}
-  h1{font-size:20pt;margin:0 0 8px 0;line-height:1.2}
-  .subheader{font-size:18pt;margin:0 0 12px 0;font-weight:500}
-  h2{font-size:14pt;margin:22px 0 8px 0;line-height:1.25}
-  .intro{font-size:12pt;line-height:1.5;color:#333;margin:4px 0 14px 0}
-
-  .progress{display:flex;gap:10px;margin:6px 0 16px 0}
-  .dot{width:10px;height:10px;border-radius:50%;background:var(--progress-gray);border:1px solid #e5e7eb}
-  .dot.active{background:var(--progress-red);border-color:var(--progress-red)}
-
-  .row{display:grid;grid-template-columns:minmax(84px,var(--label-w)) 1fr;column-gap:var(--gap);align-items:center;margin:10px 0}
-  .row>label{font-size:10pt;font-weight:400;white-space:normal;word-break:break-word}
-  .row>input,.row>select{width:100%;padding:10px 12px;font-size:10pt;border:1px solid var(--gray-300);border-radius:10px;background:#fff;transition:box-shadow .15s,border-color .15s}
-  .row>input:focus,.row>select:focus{outline:none;border-color:rgba(30,144,255,.8);box-shadow:0 0 0 3px rgba(30,144,255,.18);background:#fff}
-  select:invalid{color:#aaa}
-
-  .actions{padding-left:calc(var(--label-w) + var(--gap));margin-top:14px;display:flex;gap:10px;justify-content:flex-end}
-  button{padding:12px 18px;border:none;border-radius:12px;background:var(--brand-blue);color:#fff;font-size:12pt;cursor:pointer}
-  .btn-secondary{background:#fff;color:#111;border:1px solid var(--gray-300)}
-
-  /* Question list styling - bold title, normal subtext */
+  .container{padding:20px}
+  h1{font-size:20pt;margin:0 0 6px 0;font-weight:700}
+  .subheader{font-size:16pt;margin:0 0 12px 0;font-weight:500}
+  .progress{display:flex;gap:8px;margin:10px 0 16px 0}
+  .dot{width:10px;height:10px;border-radius:50%;background:#e5e7eb}
+  .dot.active{background:#E11D48}
+  .section-title{font-size:13pt;font-weight:700;margin:18px 0 6px 0;text-transform:uppercase}
+  .intro{font-size:12pt;margin:4px 0 14px 0}
   .q-item{padding:14px 0;border-top:1px solid #e5e7eb}
   .q-title{font-size:14pt;font-weight:700;margin:0 0 6px 0}
-  .q-sub{font-size:12pt;line-height:1.5;color:#444;margin:0 0 8px 0;font-style:normal}
-  .pill{display:inline-block;width:40px;height:40px;line-height:40px;text-align:center;border:1px solid #cfcfcf;border-radius:50%;margin-right:8px;cursor:pointer;user-select:none}
-  .pill.selected{background:var(--brand-blue);color:#fff}
-
-  /* Result bar */
-  .score-wrap{margin:12px 0;padding:12px;border:1px solid #e5e7eb;border-radius:12px;background:#fff}
-  .meter{height:12px;border-radius:999px;background:#eee;overflow:hidden}
-  .meter>span{display:block;height:100%;width:0%}
-  .meter.red>span{background:var(--bad)}
-  .meter.amber>span{background:var(--mid)}
-  .meter.green>span{background:var(--good)}
-
-  @media (max-width:340px){.row{grid-template-columns:1fr;row-gap:6px}.actions{padding-left:0}}
+  .q-sub{font-size:12pt;color:#444;margin:0 0 10px 0}
+  .pill{display:inline-block;width:40px;height:40px;line-height:40px;text-align:center;
+        border:1px solid #cfcfcf;border-radius:50%;margin-right:8px;font-size:14pt;cursor:pointer}
+  .pill.selected{background:#1E90FF;color:#fff}
+  .actions{display:flex;justify-content:space-between;margin-top:18px}
+  button{padding:12px 22px;border:none;border-radius:12px;font-size:12pt;cursor:pointer}
+  .btn-secondary{background:#fff;border:1px solid #ccc}
+  .btn-primary{background:#1E90FF;color:#fff}
 </style>
-<script id="embeddedQuestions" type="application/json">[
-  {
-    "id": 1,
-    "statement": "1. I answer very quickly to guest messages",
-    "subtext": "I often check and reply right away"
-  },
-  {
-    "id": 2,
-    "statement": "2. I make my replies warm and personal",
-    "subtext": "I use their name and add helpful information"
-  },
-  {
-    "id": 3,
-    "statement": "3. I make a great first impression",
-    "subtext": "I know it starts with the first message"
-  },
-  {
-    "id": 4,
-    "statement": "4. I can see if a guest is stressed or relaxed",
-    "subtext": "I adjust the way I check-in to the mood"
-  },
-  {
-    "id": 5,
-    "statement": "5. I ask questions before I ask passports",
-    "subtext": "I welcome guests like friends"
-  },
-  {
-    "id": 6,
-    "statement": "6. I can check-in a guest in 60 seconds",
-    "subtext": "I timed three standard check-ins"
-  },
-  {
-    "id": 7,
-    "statement": "7. I check in groups differently than FIT",
-    "subtext": "I usually check-in groups with the leader"
-  },
-  {
-    "id": 8,
-    "statement": "8. I don't say that check-in time is 14:00",
-    "subtext": "Guests can check-in when the room is ready"
-  },
-  {
-    "id": 9,
-    "statement": "9. I dont show stress when there is a problem",
-    "subtext": "I know that makes guests really worry"
-  },
-  {
-    "id": 10,
-    "statement": "10. I show genuine interest during check-out",
-    "subtext": "I ask about their stay or next destination"
-  },
-  {
-    "id": 11,
-    "statement": "11. I make great last impressions",
-    "subtext": "I walk them out and wait until their car has left"
-  },
-  {
-    "id": 12,
-    "statement": "12. I use names to connect with guests",
-    "subtext": "When it feels right I introduce myself"
-  },
-  {
-    "id": 13,
-    "statement": "13. I scan every guest every time",
-    "subtext": "I dont look at a group but at each individual"
-  },
-  {
-    "id": 14,
-    "statement": "14. I am good at scanning",
-    "subtext": "I see what people need before they ask"
-  },
-  {
-    "id": 15,
-    "statement": "15. I create unique surprises for guests",
-    "subtext": "I do more than offering free things"
-  },
-  {
-    "id": 16,
-    "statement": "16. Music is an essential part of the vibe",
-    "subtext": "I listen to make sure we play the right music"
-  },
-  {
-    "id": 17,
-    "statement": "17. I tell guests they can use other BED facilities",
-    "subtext": "I offer downtown coffee, big pool or breakfast"
-  },
-  {
-    "id": 18,
-    "statement": "18. It's annoying when a room key doesn't work",
-    "subtext": "I go up to make sure the new key works"
-  },
-  {
-    "id": 19,
-    "statement": "19. I talk with guests because I am interested",
-    "subtext": "When I force myself it will not be real"
-  },
-  {
-    "id": 20,
-    "statement": "20. I often give my friends honest feedback",
-    "subtext": "Im happy to help them to grow"
-  },
-  {
-    "id": 21,
-    "statement": "21. My friends often give me honest feedback",
-    "subtext": "I'm happy they help me to grow"
-  },
-  {
-    "id": 22,
-    "statement": "22. I can answer most questions about BED",
-    "subtext": "I have visited the rooms in all our hotels"
-  },
-  {
-    "id": 23,
-    "statement": "23. I understand the meaning of showtime",
-    "subtext": "The magic happens from 0700-1000"
-  },
-  {
-    "id": 24,
-    "statement": "24. I have peeled my own onion",
-    "subtext": "I dont act. Usually I show my true self"
-  },
-  {
-    "id": 25,
-    "statement": "25. I use ChatGPT or Gemini",
-    "subtext": "I ask for help with e.g., guest messages"
-  },
-  {
-    "id": 26,
-    "statement": "26. I send messages that look like I wrote them",
-    "subtext": "I don't copy AI because guests will know"
-  },
-  {
-    "id": 27,
-    "statement": "27. I use ChatGPT or Gemini",
-    "subtext": "I ask help to analyze and solve problems"
-  },
-  {
-    "id": 28,
-    "statement": "28. I never gossip. I signed I Promise",
-    "subtext": "I dont talk badly when someones not here"
-  },
-  {
-    "id": 29,
-    "statement": "29. I really understand that rules can be flexible",
-    "subtext": "Without reasons many rules just disappear"
-  },
-  {
-    "id": 30,
-    "statement": "30. I am confident about my own judgment",
-    "subtext": "I make decisions without asking permission"
-  },
-  {
-    "id": 31,
-    "statement": "31. I look after the whole hotel, not only front",
-    "subtext": "I include rooms, maintenance and back areas"
-  },
-  {
-    "id": 32,
-    "statement": "32. I look around when I arrive at the hotel",
-    "subtext": "I share responsibility for the whole hotel"
-  },
-  {
-    "id": 33,
-    "statement": "33. I don't pass issues to others but act myself",
-    "subtext": "I follow up later to make sure it's fixed"
-  },
-  {
-    "id": 34,
-    "statement": "34. I am not afraid of the CEO or my coach",
-    "subtext": "I know I am allowed to make mistakes"
-  },
-  {
-    "id": 35,
-    "statement": "35. I have no manuals that show me what to do",
-    "subtext": "That means I cannot do anything wrong"
-  }
-]</script>
 </head>
 <body>
   <main class="container">
     <h1>BED HOSPITALITY 2.0</h1>
     <p class="subheader">TEAM MEMBER FORM</p>
-    <div class="progress" id="progressHeader">
-      <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+    <div class="progress">
+      <span class="dot active"></span><span class="dot"></span><span class="dot"></span>
       <span class="dot"></span><span class="dot"></span><span class="dot"></span>
       <span class="dot"></span>
     </div>
 
-    <!-- ===== DO NOT EDIT: PAGE 1 START ===== -->
-    <section id="welcome">
-      <h2>Your Information</h2>
-      <div class="row"><label for="nick">your name</label><input id="nick"></div>
-      <div class="row"><label for="email">your email</label><input id="email" type="email"></div>
-      <div class="row"><label for="hotel">your location</label>
-        <select id="hotel" required>
-          <option value="" disabled selected>select hotel</option>
-          <option>BED Changkian</option>
-          <option>BED Phrasing</option>
-          <option>BED Nimman</option>
-          <option>BED Chiangmai Gate</option>
-          <option>BED Flying</option>
-          <option>BED Support</option>
-        </select>
+    <section>
+      <h2 class="section-title">STATEMENTS PART 1</h2>
+      <div class="q-item">
+        <div class="q-title">1. I answer very quickly to guest messages</div>
+        <div class="q-sub">I often check and reply right away</div>
+        <span class="pill">1</span><span class="pill">2</span><span class="pill selected">3</span><span class="pill">4</span><span class="pill">5</span>
       </div>
-
-      <h2>Peer Information</h2>
-      <p class="intro">after you completed your self assessment one of your peers will review you. select one of your team members who worked in BED for at least 12 months</p>
-      <div class="row"><label for="peerName">name peer</label><input id="peerName"></div>
-      <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email"></div>
-      <div class="row"><label for="peerHotel">peer location</label>
-        <select id="peerHotel" required>
-          <option value="" disabled selected>select hotel</option>
-          <option>BED Changkian</option>
-          <option>BED Phrasing</option>
-          <option>BED Nimman</option>
-          <option>BED Chiangmai Gate</option>
-          <option>BED Flying</option>
-          <option>BED Support</option>
-        </select>
-      </div>
-
-      <div class="actions">
-        <button id="toInstructions">Start</button>
-      </div>
-    </section>
-    <!-- ===== DO NOT EDIT: PAGE 1 END ===== -->
-
-    <!-- Instructions -->
-    <section id="instructions" style="display:none">
-      <h2>HOW TO ASSESS YOURSELF</h2>
-      <p class="intro">
-        Read each statement and think how you act in these situations. Then select the rating that best fits you. Be honest with yourself. The goal is to know your own strengths and opportunities
-      </p>
-      <h2>HOW TO SCORE YOURSELF</h2>
-      <ul class="scale-list" style="list-style:none;padding:0;margin:10px 0">
-        <li class="scale-item" style="display:flex;align-items:center;gap:10px;margin:8px 0;font-size:12pt"><span class="badge" style="width:28px;height:28px;border-radius:50%;background:var(--brand-blue);color:#fff;display:inline-flex;align-items:center;justify-content:center;font-weight:700">1</span> <span>I am not good at this</span></li>
-        <li class="scale-item" style="display:flex;align-items:center;gap:10px;margin:8px 0;font-size:12pt"><span class="badge" style="width:28px;height:28px;border-radius:50%;background:var(--brand-blue);color:#fff;display:inline-flex;align-items:center;justify-content:center;font-weight:700">2</span> <span>I need to be better at this</span></li>
-        <li class="scale-item" style="display:flex;align-items:center;gap:10px;margin:8px 0;font-size:12pt"><span class="badge" style="width:28px;height:28px;border-radius:50%;background:var(--brand-blue);color:#fff;display:inline-flex;align-items:center;justify-content:center;font-weight:700">3</span> <span>I am average at this</span></li>
-        <li class="scale-item" style="display:flex;align-items:center;gap:10px;margin:8px 0;font-size:12pt"><span class="badge" style="width:28px;height:28px;border-radius:50%;background:var(--brand-blue);color:#fff;display:inline-flex;align-items:center;justify-content:center;font-weight:700">4</span> <span>I am good at this</span></li>
-        <li class="scale-item" style="display:flex;align-items:center;gap:10px;margin:8px 0;font-size:12pt"><span class="badge" style="width:28px;height:28px;border-radius:50%;background:var(--brand-blue);color:#fff;display:inline-flex;align-items:center;justify-content:center;font-weight:700">5</span> <span>I am very good at this</span></li>
-      </ul>
-      <div class="actions">
-        <button class="btn-secondary" id="backToWelcome">Back</button>
-        <button id="toQ1">Start</button>
-      </div>
-    </section>
-
-    <!-- Questions Part 1 -->
-    <section id="q1" style="display:none">
-      <h2>Statements Part 1</h2>
-      <div id="list-q1"></div>
-      <div class="actions">
-        <button class="btn-secondary" id="backToInstructions">Back</button>
-        <button id="toQ2">Next</button>
-      </div>
-    </section>
-
-    <!-- Questions Part 2 -->
-    <section id="q2" style="display:none">
-      <h2>Statements Part 2</h2>
-      <div id="list-q2"></div>
-      <div class="actions">
-        <button class="btn-secondary" id="backToQ1">Back</button>
-        <button id="submitAll">Submit</button>
-      </div>
-    </section>
-
-    <!-- Results -->
-    <section id="finish" style="display:none">
-      <h2>Your Score</h2>
-      <div class="score-wrap">
-        <div id="scoreText" style="font-size:14pt;font-weight:700;margin-bottom:8px">—</div>
-        <div id="scoreDetail" style="font-size:12pt;margin-bottom:8px;color:#444">—</div>
-        <div id="meter" class="meter"><span></span></div>
+      <div class="q-item">
+        <div class="q-title">2. I make my replies warm and personal</div>
+        <div class="q-sub">I use their name and add helpful information</div>
+        <span class="pill">1</span><span class="pill">2</span><span class="pill selected">3</span><span class="pill">4</span><span class="pill">5</span>
       </div>
       <div class="actions">
-        <button class="btn-secondary" id="backToQ2">Back</button>
-        <button id="done">Done</button>
+        <button class="btn-secondary">Back</button>
+        <button class="btn-primary">Next</button>
       </div>
     </section>
   </main>
-
-<script>
-(function(){
-  const S = {answers:{}, questions:[]};
-  try { S.questions = JSON.parse(document.getElementById('embeddedQuestions').textContent) || []; }
-  catch(e) { S.questions = []; }
-
-  const el = id => document.getElementById(id);
-  const sections = ['welcome','instructions','q1','q2','finish'];
-
-  function show(id){
-    sections.forEach(s => el(s).style.display = (s===id ? 'block' : 'none'));
-    let n = 1;
-    if(id==='instructions') n = 2;
-    else if(id==='q1') n = 3;
-    else if(id==='q2') n = 4;
-    else if(id==='finish') n = 7;
-    setProgress(n);
-    window.scrollTo({top:0, behavior:'smooth'});
-  }
-
-  function setProgress(n){
-    const dots = document.querySelectorAll('#progressHeader .dot');
-    dots.forEach((d,i)=>d.classList.toggle('active', i < n));
-  }
-  setProgress(1);
-
-  // Strip any leading numbering like "12. " from incoming statement text
-  function stripLeadingNumber(t){
-    return String(t).replace(/^\s*\d+\.\s*/, '');
-  }
-
-  function makeQ(q,ord){
-    const d = document.createElement('div');
-    d.className = 'q-item';
-    d.dataset.qid = q.id;
-
-    const title = document.createElement('div');
-    title.className = 'q-title';
-    title.textContent = ord + '. ' + stripLeadingNumber(q.statement || '');
-    d.appendChild(title);
-
-    if(q.subtext){
-      const sub = document.createElement('div');
-      sub.className = 'q-sub';
-      sub.textContent = q.subtext;
-      d.appendChild(sub);
-    }
-
-    for(let v=1; v<=5; v++){
-      const p = document.createElement('span');
-      p.className = 'pill';
-      p.textContent = v;
-      p.dataset.val = v;
-      p.onclick = () => {
-        S.answers[q.id] = v;
-        d.querySelectorAll('.pill').forEach(x => x.classList.toggle('selected', x===p));
-      };
-      d.appendChild(p);
-    }
-    return d;
-  }
-
-  // Navigation
-  el('toInstructions').onclick = () => show('instructions');
-  el('backToWelcome').onclick = () => show('welcome');
-  el('toQ1').onclick = () => {
-    const l = el('list-q1'); l.innerHTML = '';
-    (S.questions || []).slice(0,18).forEach((q,i)=> l.appendChild(makeQ(q, i+1)));
-    show('q1');
-  };
-  el('backToInstructions').onclick = () => show('instructions');
-  el('toQ2').onclick = () => {
-    const l = el('list-q2'); l.innerHTML = '';
-    (S.questions || []).slice(18,35).forEach((q,i)=> l.appendChild(makeQ(q, 19+i)));
-    show('q2');
-  };
-  el('backToQ1').onclick = () => show('q1');
-
-  // Submit + score
-  el('submitAll').onclick = () => {
-    const ids = (S.questions || []).map(q => q.id);
-    const answered = ids.filter(id => S.answers[id] != null);
-    const total = answered.reduce((sum,id) => sum + Number(S.answers[id]||0), 0);
-    const avg = answered.length ? total / answered.length : 0;
-    const pct = answered.length ? (avg - 1) / 4 * 100 : 0; // 1..5 -> 0..100
-    const meter = document.getElementById('meter');
-    const span = meter.querySelector('span');
-    span.style.width = pct + '%';
-    meter.classList.remove('red','amber','green');
-    if(avg < 2.5) meter.classList.add('red');
-    else if(avg < 3.5) meter.classList.add('amber');
-    else meter.classList.add('green');
-    document.getElementById('scoreText').textContent = 'Average: ' + (avg ? avg.toFixed(2) : '—') + ' / 5';
-    document.getElementById('scoreDetail').textContent = answered.length + ' of ' + ids.length + ' statements answered (' + Math.round((answered.length/ids.length)*100) + '%)';
-    show('finish');
-  };
-
-  el('backToQ2').onclick = () => show('q2');
-  el('done').onclick = () => alert('Saved. Thank you!');
-})();
-</script>
 </body>
 </html>
