--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
   .pill{display:inline-block;width:44px;height:44px;line-height:44px;text-align:center;border:1px solid #cfcfcf;border-radius:50%;margin-right:10px;cursor:pointer;user-select:none;font-size:18px}
   .pill.selected{background:var(--brand-blue);color:#fff}
 
-  /* Results page (to match screenshot) */
+  /* Results page */
   .score-kicker{font-size:14px;color:#666;margin:12px 0 8px 0}
   .score-big{font-size:32px;font-weight:800;margin:0 0 24px 0}
   .gauge{position:relative;height:28px;border-radius:999px;background:linear-gradient(90deg,#ef4444 0%, #f59e0b 35%, #fbbf24 50%, #84cc16 70%, #22c55e 100%);}
   .gauge::after{content:"";position:absolute;top:-8px;bottom:-8px;width:10px;border-radius:6px;background:#333}
   .rec-kicker{font-size:14px;color:#666;margin:24px 0 8px 0}
   .rec-text{font-size:28px;font-weight:800;line-height:1.2;margin:0 0 8px 0}
+
+  /* Peer page */
+  .peer-box{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin-top:8px}
+  .peer-box p{margin:0 0 10px 0;font-size:14px;color:#444}
 
   @media (max-width:340px){.row{grid-template-columns:1fr;row-gap:6px}.actions{padding-left:0}}
 </style>
@@ -327,7 +331,21 @@
       <div id="recText" class="rec-text">—</div>
       <div class="actions">
         <button class="btn-secondary" id="backToQ2">Back</button>
-        <button id="done">Next</button>
+        <button id="toPeer">Next</button>
+      </div>
+    </section>
+
+    <!-- Peer Assessment Landing -->
+    <section id="peer" style="display:none">
+      <h2 class="section-title">PEER ASSESSMENT</h2>
+      <div class="peer-box">
+        <p>Now it’s your peer’s turn. We’ll send the review to:</p>
+        <p><strong id="peerNameOut">—</strong> (<span id="peerEmailOut">—</span>) at <span id="peerHotelOut">—</span>.</p>
+        <p>Tap <strong>Start peer assessment</strong> to continue.</p>
+      </div>
+      <div class="actions">
+        <button class="btn-secondary" id="backToFinish">Back</button>
+        <button id="peerStart">Start peer assessment</button>
       </div>
     </section>
   </main>
@@ -339,7 +357,7 @@
   catch(e) { S.questions = []; }
 
   const el = id => document.getElementById(id);
-  const sections = ['welcome','instructions','q1','q2','finish'];
+  const sections = ['welcome','instructions','q1','q2','finish','peer'];
 
   function show(id){
     sections.forEach(s => el(s).style.display = (s===id ? 'block' : 'none'));
@@ -347,7 +365,8 @@
     if(id==='instructions') n = 2;
     else if(id==='q1') n = 3;
     else if(id==='q2') n = 4;
-    else if(id==='finish') n = 5; // show five red dots like screenshot
+    else if(id==='finish') n = 5;
+    else if(id==='peer') n = 6;
     setProgress(n);
     window.scrollTo({top:0, behavior:'smooth'});
   }
@@ -409,26 +428,28 @@
   };
   el('backToQ1').onclick = () => show('q1');
 
-  // Submit + score
+  // Submit + score with original "bandwidth" comments
   el('submitAll').onclick = () => {
     const ids = (S.questions || []).map(q => q.id);
     const answered = ids.filter(id => S.answers[id] != null);
     const total = answered.reduce((sum,id) => sum + Number(S.answers[id]||0), 0);
     const avg = answered.length ? total / answered.length : 0;
     const pct = answered.length ? Math.round(((avg - 1) / 4) * 100) : 0; // 1..5 -> 0..100%
-    // Score headline
+
     el('scorePercent').textContent = 'YOUR SCORE IS ' + pct + '%';
 
-    // Position gauge marker
     const gauge = el('gauge');
-    // Using the ::after marker; set its left via CSS variable
     gauge.style.setProperty('--marker', pct + '%');
     gauge.style.position = 'relative';
-    const styleMarker = document.createElement('style');
-    styleMarker.textContent = '.gauge::after{left: calc(var(--marker) - 5px);}';
-    document.head.appendChild(styleMarker);
+    let markerStyle = document.getElementById('markerStyle');
+    if(!markerStyle){
+      markerStyle = document.createElement('style');
+      markerStyle.id = 'markerStyle';
+      document.head.appendChild(markerStyle);
+    }
+    markerStyle.textContent = '.gauge::after{left: calc(var(--marker) - 5px);}';
 
-    // Recommendation text based on pct
+    // "Original bandwidth" recommendations
     let rec = '';
     if(pct < 50) rec = 'Keep practicing!\nFocus on one habit at a time.';
     else if(pct < 70) rec = 'Good effort!\nPick two areas to improve next.';
@@ -436,11 +457,17 @@
     else rec = 'Excellent!\nBe a coach for your peers';
     el('recText').innerHTML = rec.replace(/\n/g,'<br>');
 
+    // Prefill peer info summary
+    el('peerNameOut').textContent = (document.getElementById('peerName').value || '—');
+    el('peerEmailOut').textContent = (document.getElementById('peerEmail').value || '—');
+    el('peerHotelOut').textContent = (document.getElementById('peerHotel').value || '—');
+
     show('finish');
   };
 
   el('backToQ2').onclick = () => show('q2');
-  el('done').onclick = () => alert('Saved. Thank you!');
+  el('toPeer').onclick = () => show('peer');
+  el('peerStart').onclick = () => alert('Peer assessment flow will start here.');
 })();
 </script>
 </body>
